fix: broken styles

--- a/components/AnimeForm/styles.module.css
+++ b/components/AnimeForm/styles.module.css
@@ -54,7 +54,8 @@
   flex-direction: column;
   gap: 0.3rem;
 }
-.input_container label {
+.input_container label,
+.input_container__select label {
   text-align: center;
   text-transform: capitalize;
   color: var(--Primary-Color);
@@ -78,11 +79,13 @@
 }
 
 .input_container__select {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
   border: none;
   text-align: center;
   padding: 0.3rem 0;
   border-radius: 5px;
-  box-shadow: var(--Field-Shadow);
   width: 100%;
   flex-direction: row;
   gap: 1rem;
